# jobScraper

./: .gitignore  README.md  app.py  get_details.html  get_positions.html  main.py  pyproject.toml
config/: config.py
src/model/: model.py
src/scrapers/: adidas.py  airbnb.py  apple.py  att.py  bankofamerica.py  capitec_bank.py  chevron.py  cisco.py  coinbase.py  disney.py  ecolab.py  exxonmobil.py  fedex.py  google.py  mcdonalds.py  new_capgemini.py  new_dangote.py  new_huawei.py  new_julius_berger.py  new_sanofi.py  nike.oy  nike.py  siemens.py  sysco.py  toyota.py  verizon.py  volkswagen.py  wholefoods.py  wise.py  workdayjobs.py
src/scrapers/base/: base_scraper.py
src/storage/: database.py  model.py
src/utils/: static.py
