[project]
name = "jobscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "country-named-entity-recognition>=1.0.2",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "locationtagger>=0.0.1",
    "lxml>=6.0.2",
    "lxml-html-clean>=0.4.3",
    "pgeocode>=0.5.0",
    "ptpython>=3.0.32",
    "pycountry>=24.6.1",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selectolax>=0.4.6",
    "sqlmodel>=0.0.27",
    "streamlit>=1.52.2",
]
